fserv v0.24 - June 26, 2015

 - http-proxy: HTTP connection with a client could hang if more input data is received while output data is still being sent
 - http-proxy: "deny_urls" didn't work properly


fserv v0.23 - Apr 13, 2015

 * broadcast: speed up sending data to a client by combining metadata and payload more effectively
 - fcache-test: fix usage of asynchronous update()
 - http-proxy: fix content-length filter


fserv v0.22 - Mar 6, 2015

 + config: keyword "include" supports wildcard patterns
 + http: config: new option "target_regex" inside "path" to support simple regular expressions
 - http: tunnel: shutdown() called by net.listen was failing with an error because the socket had been shut down by "http" module itself
 - http: tunnel: request data wasn't passed to a request handler anymore after it had finished producing response data
 - http: tunnel: error response wasn't sent to a client, e.g. if connection with an upstream server has failed
 + http-proxy: new option "deny_urls" to reject requests to the specified hosts. Wildcards are supported.
 * http.static-file, http.dir-index: support large filenames
 + http.static-file, cache.file: new option "read_ahead" to optimize reading from file


fserv v0.21 - Feb 2, 2015

 - http.static-file: cache was not updated if a file was renamed
 - http.static-file: don't hang while trying to open a pipe
 - http: config: default_mime_type didn't work if empty
 - http: fix error when a client couldn't receive response in case another I/O channel signals in parallel
 * http, http-proxy: use another debug log level ("http-filters") for messages about processing a chain of filters
 * http, http-proxy: access log: showing the number of received bytes in HTTP tunnel mode
 * http-proxy: access log: showing the time between acquire and release of connection with an upstream server
 - http-proxy: don't use port number in Host header field of request to upstream server if the port matches the scheme