@@ -1,47 +1,0 @@
-# FF compilation rules for GNU make
-
-FFOS_OBJ = $(FF_OBJ_DIR)/ffos.o \
-	$(FF_OBJ_DIR)/ff$(OSTYPE).o \
-	$(FF_OBJ_DIR)/ff$(OS).o
-
-FF_SRC = \
-	$(FF)/FF/ffcrc.c   \
-	$(FF)/FF/ffhashtab.c\
-	$(FF)/FF/fflist.c   \
-	$(FF)/FF/ffpath.c   \
-	$(FF)/FF/ffrbtree.c \
-	$(FF)/FF/ffstring.c \
-	$(FF)/FF/ffs-regex.c \
-	$(FF)/FF/ffsys.c    \
-	$(FF)/FF/fftime.c   \
-	\
-	$(FF)/FF/data/ffconf.c  \
-	$(FF)/FF/data/ffpsarg.c \
-	$(FF)/FF/data/ffjson.c  \
-	$(FF)/FF/data/ffxml.c   \
-	$(FF)/FF/data/ffparse.c \
-	$(FF)/FF/data/ffutf8.c  \
-	\
-	$(FF)/FF/net/ffdns.c\
-	$(FF)/FF/net/ffurl.c
-FF_HDR = $(wildcard $(FF)/FF/*.h) $(wildcard $(FF)/FF/net/*.h) $(wildcard $(FF)/FF/data/*.h)
-FF_HTTP_OBJ = $(FF_OBJ_DIR)/ffhttp.o
-
-# FF_OBJ=$(FF_SRC:.c=.o)
-FF_OBJ = $(addprefix $(FF_OBJ_DIR)/, $(addsuffix .o, $(notdir $(basename $(FF_SRC)))))
-
-
-FF_HTTP_OBJ = $(FF_OBJ_DIR)/ffhttp.o
-
-
-$(FF_OBJ_DIR)/%.o: $(FF)/FF/%.c $(FF_HDR)
-	$(C) $(CFLAGS)  $< -o$@
-
-$(FF_OBJ_DIR)/%.o: $(FF)/FF/net/%.c $(FF_HDR)
-	$(C) $(CFLAGS)  $< -o$@
-
-$(FF_OBJ_DIR)/%.o: $(FF)/FF/data/%.c $(FF_HDR)
-	$(C) $(CFLAGS)  $< -o$@
-
-$(FF_OBJ_DIR)/%.o: $(FFOS)/FFOS/%.c
-	$(C) $(CFLAGS)  $< -o$@
