@@ -1,4 +1,4 @@
-# fserv-0.20
+# fserv-0.25
 # The configuration file with all supported options and their default values.
 
 # Server root directory.
@@ -70,6 +70,9 @@ mod "cache.mem" {
 
 mod "cache.file" {
 }
+
+# mod "ssl.ssl" {
+# }
 
 mod "net.listen" {
 	# log "log.log" {
@@ -208,6 +211,11 @@ mod "http.http" {
 		# FreeBSD: disabled by default.  Enable only after executing 'kldload accf_data'.
 		# tcp_defer_accept true
 	}
+
+	# server "net.listen" {
+		# listen ":443"
+		# ssl "ssl.ssl"
+	# }
 
 	# syntax: "include FILE ...", where FILE can be a wildcard, e.g. include "conf/http-*.conf"
 	include "conf/static.conf"
