@@ -1,4 +1,4 @@
-# fserv-0.22
+# fserv-0.25
 # HTTP host configured as a forward proxy
 
 host "proxy_server" {
