@@ -49,6 +49,9 @@ host "host1" {
 	}
 
 	log {
+		access "file" {
+			file "log/host1-access.log"
+		}
 		error "file" {
 			file "log/host1-error.log"
 		}
